fix a bug in align

--- a/src/css/activity/1602_shareorder.css
+++ b/src/css/activity/1602_shareorder.css
@@ -10,11 +10,13 @@
 {
     overflow: hidden;
 
-    width: 100%;
+    width: 1200px;
+    height: 445px;
 }
 .activity_banner_wrapper img{
     display: block;
     width: 1920px;
+    height: 445px;
 }
 .activity_main_wrapper
 {
